# reachy-eyes

./: .gitignore  INSTALLATION.md  INSTALLATION_OptionB.md  README.md  pyproject.toml
demos/: _runner.py  ack.py  blink.py  breathe.py  chaos.py  demo_all_the_things.py  lets_vibe.py  smooth_colors.py  smooth_independent_colors.py  snap_colors.py  startle.py  uh_oh.py  wink.py
reachy_eyes/: __init__.py  defaults.py  device.py  eyes.py  protocol.py
